<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoModel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_address">Enter Address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

</resources>
